# metar_fetcher

./: Cargo.toml
src/: main.rs  metar_fetcher.rs
